# cmake-qt-initial-project

./: .gitignore  CMakeLists.txt
src/: main.cc
src/ui/: MainWindow.cc
src/ui/MainWindow/: MainWindow.cc
